--- a/Parking/View/Cell/StationCell.xib
+++ b/Parking/View/Cell/StationCell.xib
@@ -18,21 +18,20 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="P4G-0i-CiI">
                         <rect key="frame" x="0.0" y="0.0" width="459" height="165"/>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="OVW-y5-3gx">
-                        <rect key="frame" x="25" y="80" width="48" height="65"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="OVW-y5-3gx">
+                        <rect key="frame" x="25" y="80" width="359" height="65"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EE7-6D-Pob">
-                                <rect key="frame" x="0.0" y="0.0" width="48" height="30"/>
+                                <rect key="frame" x="0.0" y="0.0" width="359" height="30"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U7i-tK-UY4">
                                         <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="21z-Pj-Z0S"/>
-                                            <constraint firstAttribute="height" constant="30" id="C3z-fc-wgc"/>
+                                            <constraint firstAttribute="width" secondItem="U7i-tK-UY4" secondAttribute="height" id="Frg-ym-59b"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XwZ-xo-Seq">
-                                        <rect key="frame" x="40" y="0.0" width="8" height="30"/>
+                                        <rect key="frame" x="40" y="0.0" width="319" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -40,17 +39,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XL1-dg-8Mt">
-                                <rect key="frame" x="0.0" y="35" width="48" height="30"/>
+                                <rect key="frame" x="0.0" y="35" width="359" height="30"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3cV-fx-WkG">
                                         <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="BhF-Sx-WLN"/>
-                                            <constraint firstAttribute="height" constant="30" id="p1d-gY-wyz"/>
+                                            <constraint firstAttribute="width" secondItem="3cV-fx-WkG" secondAttribute="height" id="ta4-0w-hH7"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVQ-7L-Img">
-                                        <rect key="frame" x="40" y="0.0" width="8" height="30"/>
+                                        <rect key="frame" x="40" y="0.0" width="319" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -58,9 +56,6 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="65" id="LZ1-PI-l8S"/>
-                        </constraints>
                     </stackView>
                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="8fs-je-R32">
                         <rect key="frame" x="414" y="30" width="20" height="20"/>
@@ -121,6 +116,7 @@
                     <constraint firstItem="OVW-y5-3gx" firstAttribute="top" secondItem="hw1-vN-0h8" secondAttribute="bottom" constant="20" id="pQK-zg-UpG"/>
                     <constraint firstItem="hw1-vN-0h8" firstAttribute="leading" secondItem="XDW-bb-Cey" secondAttribute="leading" constant="20" id="qCm-Fa-N4J"/>
                     <constraint firstAttribute="trailing" secondItem="P4G-0i-CiI" secondAttribute="trailing" id="rCu-h7-pjk"/>
+                    <constraint firstItem="aIn-6A-7de" firstAttribute="leading" secondItem="OVW-y5-3gx" secondAttribute="trailing" constant="20" id="xy1-rc-96l"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
