--- a/Parking/View/Cell/StationCell.xib
+++ b/Parking/View/Cell/StationCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,19 +19,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="459" height="165"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="OVW-y5-3gx">
-                        <rect key="frame" x="25" y="80" width="359" height="65"/>
+                        <rect key="frame" x="70" y="80" width="314" height="65"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EE7-6D-Pob">
-                                <rect key="frame" x="0.0" y="0.0" width="359" height="30"/>
+                                <rect key="frame" x="0.0" y="0.0" width="314" height="30"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U7i-tK-UY4">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XwZ-xo-Seq">
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="U7i-tK-UY4" secondAttribute="height" id="Frg-ym-59b"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="80E-MZ-lBM"/>
                                         </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XwZ-xo-Seq">
-                                        <rect key="frame" x="40" y="0.0" width="319" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -39,16 +36,13 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XL1-dg-8Mt">
-                                <rect key="frame" x="0.0" y="35" width="359" height="30"/>
+                                <rect key="frame" x="0.0" y="35" width="314" height="30"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3cV-fx-WkG">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVQ-7L-Img">
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="3cV-fx-WkG" secondAttribute="height" id="ta4-0w-hH7"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="rwk-ow-gbd"/>
                                         </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVQ-7L-Img">
-                                        <rect key="frame" x="40" y="0.0" width="319" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -96,17 +90,34 @@
                             <action selector="didTapFavoriteButton:" destination="6sg-Ua-2XL" eventType="touchUpInside" id="yjP-ru-i52"/>
                         </connections>
                     </button>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U7i-tK-UY4">
+                        <rect key="frame" x="25" y="80" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="U7i-tK-UY4" secondAttribute="height" id="Frg-ym-59b"/>
+                            <constraint firstAttribute="width" constant="30" id="R7e-cs-xLA"/>
+                        </constraints>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3cV-fx-WkG">
+                        <rect key="frame" x="25" y="115" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="qyI-On-s6l"/>
+                            <constraint firstAttribute="width" secondItem="3cV-fx-WkG" secondAttribute="height" id="ta4-0w-hH7"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="ieS-aD-sX8" firstAttribute="leading" secondItem="hw1-vN-0h8" secondAttribute="trailing" constant="10" id="1NI-qR-KAl"/>
+                    <constraint firstItem="3cV-fx-WkG" firstAttribute="centerX" secondItem="hw1-vN-0h8" secondAttribute="centerX" id="37c-p9-R2I"/>
                     <constraint firstItem="P4G-0i-CiI" firstAttribute="bottom" secondItem="OVW-y5-3gx" secondAttribute="bottom" constant="20" id="Gtd-Gn-vsO"/>
                     <constraint firstItem="ooI-tC-V0a" firstAttribute="centerY" secondItem="OVW-y5-3gx" secondAttribute="centerY" id="JwG-Ha-S9w"/>
                     <constraint firstItem="hw1-vN-0h8" firstAttribute="top" secondItem="XDW-bb-Cey" secondAttribute="top" constant="20" id="K6D-6e-ZnM"/>
+                    <constraint firstItem="U7i-tK-UY4" firstAttribute="centerY" secondItem="XwZ-xo-Seq" secondAttribute="centerY" id="Pet-8Y-Lyn"/>
                     <constraint firstItem="aIn-6A-7de" firstAttribute="centerY" secondItem="ooI-tC-V0a" secondAttribute="centerY" id="QlR-EN-VEg"/>
                     <constraint firstItem="ieS-aD-sX8" firstAttribute="centerY" secondItem="hw1-vN-0h8" secondAttribute="centerY" id="RBH-Bd-MLa"/>
                     <constraint firstAttribute="trailing" secondItem="ooI-tC-V0a" secondAttribute="trailing" constant="20" id="S0s-0I-YgV"/>
                     <constraint firstItem="P4G-0i-CiI" firstAttribute="leading" secondItem="XDW-bb-Cey" secondAttribute="leading" id="Uw4-7c-apZ"/>
-                    <constraint firstItem="OVW-y5-3gx" firstAttribute="leading" secondItem="XDW-bb-Cey" secondAttribute="leading" constant="25" id="VNY-Lb-8zf"/>
+                    <constraint firstItem="OVW-y5-3gx" firstAttribute="leading" secondItem="ieS-aD-sX8" secondAttribute="leading" id="VNY-Lb-8zf"/>
+                    <constraint firstItem="U7i-tK-UY4" firstAttribute="centerX" secondItem="hw1-vN-0h8" secondAttribute="centerX" id="We9-jK-JQn"/>
                     <constraint firstItem="8fs-je-R32" firstAttribute="top" secondItem="XDW-bb-Cey" secondAttribute="top" constant="30" id="fU9-5Y-Y0r"/>
                     <constraint firstAttribute="bottom" secondItem="P4G-0i-CiI" secondAttribute="bottom" constant="20" id="ffe-OC-Ox5"/>
                     <constraint firstAttribute="trailing" secondItem="8fs-je-R32" secondAttribute="trailing" constant="25" id="fgu-uI-Oug"/>
@@ -116,6 +127,7 @@
                     <constraint firstItem="OVW-y5-3gx" firstAttribute="top" secondItem="hw1-vN-0h8" secondAttribute="bottom" constant="20" id="pQK-zg-UpG"/>
                     <constraint firstItem="hw1-vN-0h8" firstAttribute="leading" secondItem="XDW-bb-Cey" secondAttribute="leading" constant="20" id="qCm-Fa-N4J"/>
                     <constraint firstAttribute="trailing" secondItem="P4G-0i-CiI" secondAttribute="trailing" id="rCu-h7-pjk"/>
+                    <constraint firstItem="3cV-fx-WkG" firstAttribute="centerY" secondItem="CVQ-7L-Img" secondAttribute="centerY" id="xV4-8j-RmA"/>
                     <constraint firstItem="aIn-6A-7de" firstAttribute="leading" secondItem="OVW-y5-3gx" secondAttribute="trailing" constant="20" id="xy1-rc-96l"/>
                 </constraints>
             </tableViewCellContentView>
